# javabind

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  launch.bat  launch.sh
.github/workflows/: publish.yml
codegen/: .gitignore  main.cpp
include/javabind/: argtype.hpp  binding.hpp  callback.hpp  chrono.hpp  class.hpp  codegen.hpp  collection.hpp  core.hpp  enum.hpp  exception.hpp  export.hpp  function.hpp  global.hpp  javabind.hpp  local.hpp  message.hpp  object.hpp  optional.hpp  output.hpp  record.hpp  signature.hpp  string.hpp  traits.hpp  type.hpp  view.hpp
java/hu/info/hunyadi/javabind/: NativeCallback.java  NativeConsumer.java  NativeDoubleConsumer.java  NativeDoubleFunction.java  NativeDoublePredicate.java  NativeFunction.java  NativeIntConsumer.java  NativeIntFunction.java  NativeIntPredicate.java  NativeLongConsumer.java  NativeLongFunction.java  NativeLongPredicate.java  NativeObject.java  NativePredicate.java  NativeToDoubleFunction.java  NativeToIntFunction.java  NativeToLongFunction.java
java/hu/info/hunyadi/test/: FooBar.java  Person.java  PrimitiveRecord.java  Rectangle.java  Residence.java  Sample.java  StaticSample.java  TestJavaBind.java
test/: format.hpp  javabind.cpp
